--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "jest --config=jest.config.test.js",
     "integ-test": "jest --config=jest.config.integ.test.js",
     "compile": "tsc --build --clean && tsc",
+    "codegen": "graphql-codegen",
     "build": "sam build",
     "compile_and_build": "npm run compile && npm run build",
     "deploy": "cross-var sam deploy --resolve-s3 --capabilities CAPABILITY_IAM --stack-name $npm_package_name-stack",
@@ -17,17 +18,21 @@
     "delete": "cross-var sam delete --stack-name $npm_package_name-stack"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.0",
-    "@babel/preset-env": "^7.19.0",
-    "@babel/preset-typescript": "^7.18.6",
-    "@types/aws-lambda": "^8.10.103",
-    "@types/jest": "^29.0.1",
-    "@types/node": "^18.7.17",
-    "aws-sdk": "^2.1214.0",
-    "axios": "^0.27.2",
-    "babel-jest": "^29.0.3",
-    "cross-var": "^1.1.0",
-    "jest": "^29.0.3",
-    "typescript": "^4.8.3"
+      "@babel/core": "^7.19.0",
+      "@babel/preset-env": "^7.19.0",
+      "@babel/preset-typescript": "^7.18.6",
+      "@graphql-codegen/cli": "^2.12.0",
+      "@graphql-codegen/typescript": "^2.7.3",
+      "@types/aws-lambda": "^8.10.103",
+      "@types/jest": "^29.0.1",
+      "@types/node": "^18.7.17",
+      "aws-sdk": "^2.1214.0",
+      "axios": "^0.27.2",
+      "babel-jest": "^29.0.3",
+      "dotenv": "^16.0.2",
+      "jest": "^29.0.3",
+      "ts-node": "^10.9.1",
+      "typescript": "^4.8.3",
+      "cross-var": "^1.1.0"
   }
 }
